--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles/index.css" rel="stylesheet">
-    <title>User Blog</title>
+    <title>Author Blog</title>
   </head>
   <body>
     <div id="root"></div>
